# anxwritter-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE.md  README.md
.github/workflows/: ci.yml
examples/: bench.rs  conc.rs  emit.rs  memprobe.rs  native_demo.rs  valjson.rs
src/: api.rs  builder.rs  color.rs  config_layering.rs  custom_icons.rs  datetime.rs  discovery.rs  entities.rs  enums.rs  error.rs  ids.rs  input.rs  interop.rs  layout.rs  lib.rs  models.rs  resolved.rs  semantic.rs  sugar.rs  transforms.rs  validation.rs  value.rs  xml.rs
tests/: config_layering_parity.rs  conformance.rs  force_directed.rs  output_corpus.rs  properties.rs  validation_parity.rs
tests/fixtures/: config_layering.json  example_config.json  example_config.yaml  example_data.json  example_data.yaml  output_corpus.json  validation_parity.json
