[package]
name = "anxwritter"
version = "1.24.1"
edition = "2021"
rust-version = "1.88"
description = "Write i2 Analyst's Notebook Exchange (.anx) files from typed data, JSON, or YAML — Rust port of the anxwritter Python library"
license = "MIT"
repository = "https://github.com/gustavo-gkmi/anxwritter-rust"
homepage = "https://github.com/gustavo-gkmi/anxwritter"
readme = "README.md"
keywords = ["i2", "anx", "analysts-notebook", "link-analysis"]
categories = ["parser-implementations", "data-structures", "visualization"]
include = [
    "src/**/*.rs",
    "examples/**/*.rs",
    "tests/**/*.rs",
    "tests/fixtures/*.json",
    "tests/fixtures/*.yaml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "NOTICE.md",
    "Cargo.toml",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
indexmap = { version = "2", features = ["serde"] }
regex = "1"
uuid = { version = "1", features = ["v5"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
thiserror = "2"
serde_with = "3"
flate2 = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif"] }

[dev-dependencies]
quick-xml = "0.37"
